@@ -113,7 +113,11 @@ void PluginsManager::save()
         if (item->checkState() == Qt::Checked) {
             const Plugins::Plugin plugin = item->data(Qt::UserRole + 10).value<Plugins::Plugin>();
 
+#ifndef PORTABLE_BUILD
             allowedPlugins.append(plugin.fullPath);
+#else
+            allowedPlugins.append(mApp->DATADIR + "plugins/" + plugin.fileName);
+#endif
         }
     }
 
