@@ -7,6 +7,7 @@ Version 1.5.0
     * cancel upload when trying to upload non-readable files
     * GreaseMonkey: added support for GM_Settings
     * fixed: size of preferences dialog on low-res screens
+    * fixed: loading plugins with relative paths in portable build
 
 Version 1.4.1
     * released 15 March 2013
